--- a/CS_340_Database_Website/templates/customers.j2
+++ b/CS_340_Database_Website/templates/customers.j2
@@ -60,8 +60,9 @@
 </head>
 
 <body onload="browseCustomers()">
-	<h1>Customers</h1> [ Rentals | <a href="customers">Customers</a> | Movies | Genres ]
+	<h1>Customers</h1> [ <a href="index">Homepage</a>  | <a href="rentals">Rentals</a> | <a href="customers">Customers</a>  | <a href="movies">Movies</a> | <a href="genres">Genres</a> |<a href="movie_genre_details">Movie Genre Details</a> ]
 	<div id="browse">
+	<p> Browse all Customers. Select add new, edit or delete to update the customer base. </p>
 		<p><a href="#" onClick="newCustomer()">Add New</a> </p>
 		<table border="1" cellpadding="5">
             <!-- Access data tuple passed from webapp.py --> 
