--- a/templates/index.j2
+++ b/templates/index.j2
@@ -1,6 +1,10 @@
 <html>
 <head>
-    <title>Genre Genie</title>
+    <title>Genre Genie </title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='icons/favicon-16x16.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='icons/favicon-32x32.png') }}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='icons/apple-touch-icon.png') }}">
 </head>
 <body>
     <h2>Genre Genie Database</h2>
